// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component renders Message by default 1`] = `
<li
  className="portal__message-item"
>
  <p
    className="portal__message-content"
  />
  <p
    className="portal__message-info"
  >
    Sent 
     - 
  </p>
</li>
`;

exports[`Message component renders given props 1`] = `
<li
  className="portal__message-item"
>
  <p
    className="portal__message-content"
  >
    This is some test content.
  </p>
  <p
    className="portal__message-info"
  >
    Sent 
    10/23/2019, 12:09:09 PM
     - 
    test
  </p>
</li>
`;
